--- a/mod_main/src/main/res/values/themes.xml
+++ b/mod_main/src/main/res/values/themes.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="Theme.WanAndroidYj" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!-- Customize your theme here. -->
+    </style>
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
@@ -7,5 +20,18 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/colorPrimary</item>
         <item name="windowActionBar">false</item>
     </style>
-    <style name="Theme.WanAndroidYj" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="style_mine_service">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">@dimen/dp_58</item>
+    <item name="android:gravity">center</item>
+    <item name="android:textColor">@color/color_222427</item>
+    <item name="android:textSize">@dimen/text_size_11</item>
+    <item name="android:drawablePadding">@dimen/dp_4</item>
+    <item name="android:paddingTop">@dimen/dp_6</item>
+    <item name="android:layout_marginTop">@dimen/dp_6</item>
+    <item name="android:paddingBottom">@dimen/dp_6</item>
+    <item name="android:background">?attr/selectableItemBackground</item>
+    </style>
+
 </resources>
